--- a/module3/James_Barciz_LS_DS_223_assignment.ipynb
+++ b/module3/James_Barciz_LS_DS_223_assignment.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "James Barciz - LS_DS_223_assignment.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -328,9 +327,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 138
+          "height": 244
         },
-        "outputId": "74b6b91c-4766-4b07-e744-22970d06ae95"
+        "outputId": "69fdbac6-6aa1-4a71-ccc5-727b96c8357e"
       },
       "source": [
         "param_distributions = {\n",
@@ -343,8 +342,8 @@
         "search = RandomizedSearchCV(\n",
         "    pipeline,\n",
         "    param_distributions=param_distributions,\n",
-        "    n_iter=6,\n",
-        "    cv=3,\n",
+        "    n_iter=10,\n",
+        "    cv=4,\n",
         "    scoring='accuracy',\n",
         "    verbose=10,\n",
         "    return_train_score=True,\n",
@@ -353,12 +352,12 @@
         "\n",
         "search.fit(X_train, y_train);"
       ],
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n"
+            "Fitting 4 folds for each of 10 candidates, totalling 40 fits\n"
           ],
           "name": "stdout"
         },
@@ -366,11 +365,16 @@
           "output_type": "stream",
           "text": [
             "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 2 concurrent workers.\n",
-            "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:  2.9min\n",
-            "[Parallel(n_jobs=-1)]: Done   4 tasks      | elapsed:  4.1min\n",
-            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:  6.4min\n",
-            "[Parallel(n_jobs=-1)]: Done  14 tasks      | elapsed:  7.5min\n",
-            "[Parallel(n_jobs=-1)]: Done  18 out of  18 | elapsed:  9.7min finished\n"
+            "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    7.1s\n",
+            "[Parallel(n_jobs=-1)]: Done   4 tasks      | elapsed:   12.6s\n",
+            "/usr/local/lib/python3.6/dist-packages/joblib/externals/loky/process_executor.py:706: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+            "  \"timeout or by a memory leak.\", UserWarning\n",
+            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:  3.8min\n",
+            "[Parallel(n_jobs=-1)]: Done  14 tasks      | elapsed:  7.1min\n",
+            "[Parallel(n_jobs=-1)]: Done  21 tasks      | elapsed: 13.1min\n",
+            "[Parallel(n_jobs=-1)]: Done  28 tasks      | elapsed: 22.3min\n",
+            "[Parallel(n_jobs=-1)]: Done  37 tasks      | elapsed: 26.2min\n",
+            "[Parallel(n_jobs=-1)]: Done  40 out of  40 | elapsed: 26.9min finished\n"
           ],
           "name": "stderr"
         }
@@ -385,19 +389,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "18316b68-37f0-45d8-80e3-cd97d106d4ba"
+        "outputId": "ebc32d50-eae3-4ba9-e9dc-1695562bd52b"
       },
       "source": [
         "print('Best hyperparameters', search.best_params_)\n",
         "print('Cross-Validation Accuracy Score', search.best_score_)"
       ],
-      "execution_count": 22,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Best hyperparameters {'randomforestclassifier__max_depth': 20, 'randomforestclassifier__max_features': 0.3021279140007346, 'randomforestclassifier__n_estimators': 180, 'simpleimputer__strategy': 'mean'}\n",
-            "Cross-Validation Accuracy Score 0.8058080808080809\n"
+            "Best hyperparameters {'randomforestclassifier__max_depth': 20, 'randomforestclassifier__max_features': 0.31111256817667554, 'randomforestclassifier__n_estimators': 358, 'simpleimputer__strategy': 'median'}\n",
+            "Cross-Validation Accuracy Score 0.8092087542087542\n"
           ],
           "name": "stdout"
         }
@@ -438,12 +442,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "5d3a331a-ce0e-4d9e-f021-0807852a826e"
+        "outputId": "1c9e6c9d-84f7-4a91-9163-14fc562796e3"
       },
       "source": [
         "y_pred"
       ],
-      "execution_count": 26,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +460,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 36
         }
       ]
     },
@@ -471,7 +475,7 @@
         "submission = test[['id']].copy()\n",
         "submission['status_group'] = y_pred\n",
         "# submission['status_group']\n",
-        "submission.to_csv('status_group_JamesBarciz_2.csv', index=False)"
+        "submission.to_csv('status_group_JamesBarciz_3.csv', index=False)"
       ],
       "execution_count": 0,
       "outputs": []
